# django_channels_chat

./: db.sqlite3  pyproject.toml
accounts/: admin.py  manager.py  models.py
accounts/migrations/: 0001_initial.py
chat/: admin.py  consumers.py  models.py  signals.py  urls.py  views.py
chat/migrations/: 0001_initial.py
django_channels_chat/: asgi.py  settings.py  urls.py
templates/chat/: groupchat.html
